<resources>
    <string name="app_name">10119260UTS</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_info">InfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infosatu">Info Satu</string>
    <string name="infodua">Info Dua</string>
    <string name="Judul">APLIKASI CATATAN ALIMUNTUNG</string>
    <string name="fragment_info">Info Aplikasi</string>
    <!--Profil-->
    <string name="nama">Ikbar Laudza Alviansyah</string>
    <string name="NIM">10119260</string>
    <string name="kelas">IF-7</string>
    <string name="deskripsi">Seorang pemuda yang tertarik dengan teknologi</string>
    <string name="profil">Profil</string>
    <string name="tombolback"><![CDATA[<]]></string>
    <string name="tombolnext"><![CDATA[>]]></string>
    <string name="catatan">Catatan</string>
    <string name="kategori">kategori</string>
    <string name="judul_catatan">Judul Catatan</string>
    <string name="aplikasi_canbuk_merupakan_aplikasi_untuk_melakukan_catatan_harian">Aplikasi Canbuk Merupakan Aplikasi untuk melakukan catatan harian</string>
    <!---->
</resources>