<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity"
    android:padding="60dp">

    <!--  Ikbar Laudza Alviansyah
   IF-7
   10119260
   22 April 2022 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="50dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/register" />

</LinearLayout>

