<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.profil.ProfilFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ProfileActivity"
        android:padding="30dp">

        <!--    Nama : Ikbar Laudza Alviansyah
         Kelas : IF-7
         NIM : 10119260-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil"
                    android:textSize="40dp"
                    android:gravity="center"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="360dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp">

                    <ImageView
                        android:id="@+id/roundedImageView"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/profil"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        />
                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#35F82D"
                    android:padding="10dip"
                    android:text="@string/nama"
                    android:textColor="#000"
                    android:textSize="12dp" />


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F17777"
                    android:padding="10dp"
                    android:text="@string/NIM"
                    android:textColor="#000"
                    android:textSize="12dp" />


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#62EFBD"
                    android:padding="10dp"
                    android:text="@string/kelas"
                    android:textColor="#000"
                    android:textSize="12dp" />


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView

                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:background="#EFBB62"
                    android:padding="10dp"
                    android:text="@string/deskripsi"
                    android:textColor="#000"
                    android:textSize="12dp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="center"/>
        </TableLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>